--- a/style.css
+++ b/style.css
@@ -92,6 +92,15 @@ input[type="checkbox"] + span {
     margin: 5px;
 }
 
+#copyBtn{
+    padding: 10px 10px;
+    font-size: 14px;
+    border-radius: 5px;
+    font-weight: 600;   
+    background-color: #DEEFE7;
+    margin-top: 10px;
+}
+
 button:hover{
     border: 2px solid white;
 }
@@ -116,6 +125,9 @@ button:hover{
 
 .result{
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #password{
