--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: "Helvetica", "Arial","LiHei Pro","黑體-繁","微軟正黑體", sans-serif;
     text-align: center;
     padding: 20px;
-    background-color: #3F6294;
+    background-color: #769bd0;
     color:#2F3D40;
    
 }
@@ -75,6 +75,11 @@ input[type="checkbox"] + span {
     border-radius: 5px;
     font-weight: 600;
     margin: 5px;
+    border: 2px solid #bc891c;
+}
+
+#generateBtn:hover{
+    border: 2px solid white;
 }
 
 #regenerateBtn{
@@ -83,7 +88,12 @@ input[type="checkbox"] + span {
     border-radius: 5px;
     font-weight: 600;
     background-color: #9FC131;
+    border: 2px solid #71900d;
     margin: 5px;
+}
+
+#regenerateBtn:hover{
+    border: 2px solid white;
 }
 
 #resetBtn{
@@ -91,8 +101,13 @@ input[type="checkbox"] + span {
     font-size: 14px;
     border-radius: 5px;
     font-weight: 600;   
-    background-color: #D6D58E;
+    background-color: #fde047;
+    border: 2px solid #eab308;
     margin: 5px;
+}
+
+#resetBtn:hover{
+    border: 2px solid white;
 }
 
 #copyBtn{
@@ -100,11 +115,13 @@ input[type="checkbox"] + span {
     font-size: 14px;
     border-radius: 5px;
     font-weight: 600;   
-    background-color: #DEEFE7;
+    background-color: #bdddcf;
+    border: 2px solid #90c5b2;
     margin-top: 20px;
+    color:#1a3a32;
 }
 
-button:hover{
+#copyBtn:hover{
     border: 2px solid white;
 }
 
